tests/errors/collections/comprehension_limit.sad
# comprehension_limit test
risk {
    [i Cycle i = 0 : 100000]
} trap ValueError e {
    show(e.message)
}
